--- a/app/src/main/res/layout/activity_bloknot.xml
+++ b/app/src/main/res/layout/activity_bloknot.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#615F5F"
+    android:onClick="onClikeSave"
     tools:context=".BloknotActivity">
 
 
@@ -41,13 +42,14 @@
         app:layout_constraintStart_toStartOf="@+id/editTextTitle" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
+        android:id="@+id/btAddNote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="32dp"
         android:clickable="true"
         android:onClick="onClikeSave"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@+id/editTextNoteContent"
         app:layout_constraintTop_toTopOf="@+id/editTextNoteContent"
         app:srcCompat="@drawable/ic_save" />
@@ -77,7 +79,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvTimeStart"
         android:layout_width="124dp"
         android:layout_height="21dp"
         android:layout_marginBottom="8dp"
@@ -91,7 +93,7 @@
         app:layout_constraintStart_toStartOf="@+id/btnStartTime" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvTimeFinish"
         android:layout_width="124dp"
         android:layout_height="wrap_content"
         android:hint="FINISH TIME"
@@ -99,10 +101,21 @@
         android:text="Время Окончания"
         android:textAlignment="center"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTimeStart"
         app:layout_constraintEnd_toEndOf="@+id/btnFinishTime"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btnFinishTime"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/tvTimeStart" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/rewriteNote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="32dp"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="@+id/editTextNoteContent"
+        app:layout_constraintTop_toBottomOf="@+id/btAddNote"
+        app:srcCompat="@drawable/ic_writer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
